--- a/CPP Project/CPP Project.vcxproj
+++ b/CPP Project/CPP Project.vcxproj
@@ -121,6 +121,12 @@
     <ClCompile Include="Animal.cpp" />
     <ClCompile Include="calendar.cpp" />
     <ClCompile Include="class.cpp" />
+    <ClCompile Include="Date.cpp" />
+    <ClCompile Include="Date_Constructor.cpp" />
+    <ClCompile Include="overloading1.cpp" />
+    <ClCompile Include="overloading2.cpp" />
+    <ClCompile Include="overloading3.cpp" />
+    <ClCompile Include="Point.cpp" />
     <ClCompile Include="switch.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
