--- a/CPP Project/CPP Project.vcxproj.filters
+++ b/CPP Project/CPP Project.vcxproj.filters
@@ -45,13 +45,22 @@
     <ClCompile Include="Point.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="starcraft.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="destructor_test.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="photon_cannon.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="string_quest.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="marine.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="reference_return_function.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="string_class_quest.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
