--- a/CPP Project/CPP Project.vcxproj
+++ b/CPP Project/CPP Project.vcxproj
@@ -121,13 +121,20 @@
     <ClCompile Include="Animal.cpp" />
     <ClCompile Include="calendar.cpp" />
     <ClCompile Include="class.cpp" />
+    <ClCompile Include="Complex.cpp" />
     <ClCompile Include="Date.cpp" />
     <ClCompile Include="Date_Constructor.cpp" />
     <ClCompile Include="destructor_test.cpp" />
+    <ClCompile Include="explicit.cpp" />
+    <ClCompile Include="intWrapper.cpp" />
+    <ClCompile Include="Matrix_2D.cpp" />
+    <ClCompile Include="mutable.cpp" />
+    <ClCompile Include="MyString2.cpp" />
     <ClCompile Include="overloading1.cpp" />
     <ClCompile Include="overloading2.cpp" />
     <ClCompile Include="overloading3.cpp" />
     <ClCompile Include="photon_cannon.cpp" />
+    <ClCompile Include="plusplus.cpp" />
     <ClCompile Include="Point.cpp" />
     <ClCompile Include="marine.cpp" />
     <ClCompile Include="reference_return_function.cpp" />
