--- a/CPP Project/CPP Project.vcxproj
+++ b/CPP Project/CPP Project.vcxproj
@@ -128,6 +128,7 @@
     <ClCompile Include="explicit.cpp" />
     <ClCompile Include="intWrapper.cpp" />
     <ClCompile Include="Matrix_2D.cpp" />
+    <ClCompile Include="Matrix_nD.cpp" />
     <ClCompile Include="mutable.cpp" />
     <ClCompile Include="MyString2.cpp" />
     <ClCompile Include="overloading1.cpp" />
