--- a/CPP Project/CPP Project.vcxproj
+++ b/CPP Project/CPP Project.vcxproj
@@ -162,6 +162,7 @@
     <ClCompile Include="입출력\ofstream__test.cpp" />
     <ClCompile Include="입출력\streambuf.cpp" />
     <ClCompile Include="입출력\stringstream.cpp" />
+    <ClCompile Include="템플릿\template_first.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="test.txt" />
