--- a/CPP Project/CPP Project.vcxproj
+++ b/CPP Project/CPP Project.vcxproj
@@ -162,8 +162,10 @@
     <ClCompile Include="입출력\ofstream__test.cpp" />
     <ClCompile Include="입출력\streambuf.cpp" />
     <ClCompile Include="입출력\stringstream.cpp" />
+    <ClCompile Include="템플릿\default_template.cpp" />
     <ClCompile Include="템플릿\function_object-functor.cpp" />
     <ClCompile Include="템플릿\function_template.cpp" />
+    <ClCompile Include="템플릿\non-type_template.cpp" />
     <ClCompile Include="템플릿\template_first.cpp" />
   </ItemGroup>
   <ItemGroup>
