--- a/CPP Project/CPP Project.vcxproj
+++ b/CPP Project/CPP Project.vcxproj
@@ -119,6 +119,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="STL\stl_iterator.cpp" />
+    <ClCompile Include="STL\stl_vector.cpp" />
     <ClCompile Include="상속, 가상함수\base_inheritance.cpp" />
     <ClCompile Include="상속, 가상함수\Employee.cpp" />
     <ClCompile Include="상속, 가상함수\mutiple_inheritance.cpp" />
