--- a/CPP Project/CPP Project.vcxproj
+++ b/CPP Project/CPP Project.vcxproj
@@ -184,6 +184,10 @@
     <ClCompile Include="템플릿\string_concat.cpp" />
     <ClCompile Include="템플릿\template_first.cpp" />
     <ClCompile Include="템플릿\variadic_template.cpp" />
+    <ClCompile Include="프로그래머스\스택,큐\기능개발.cpp" />
+    <ClCompile Include="프로그래머스\스택,큐\다리를 지나는 트럭.cpp" />
+    <ClCompile Include="프로그래머스\스택,큐\탑.cpp" />
+    <ClCompile Include="프로그래머스\스택,큐\프린터.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="test.txt" />
