--- a/CPP Project/CPP Project.vcxproj
+++ b/CPP Project/CPP Project.vcxproj
@@ -187,9 +187,12 @@
     <ClCompile Include="프로그래머스\스택,큐\기능개발.cpp" />
     <ClCompile Include="프로그래머스\스택,큐\다리를 지나는 트럭.cpp" />
     <ClCompile Include="프로그래머스\스택,큐\쇠막대기.cpp" />
-    <ClCompile Include="프로그래머스\스택,큐\주식가격.cpp" />
+    <ClCompile Include="프로그래머스\스택,큐\주식가격%28미해결%29.cpp" />
     <ClCompile Include="프로그래머스\스택,큐\탑.cpp" />
     <ClCompile Include="프로그래머스\스택,큐\프린터.cpp" />
+    <ClCompile Include="프로그래머스\정렬\H-Index.cpp" />
+    <ClCompile Include="프로그래머스\정렬\K번째수.cpp" />
+    <ClCompile Include="프로그래머스\정렬\가장큰수.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="test.txt" />
