--- a/CPP Project/CPP Project.vcxproj.filters
+++ b/CPP Project/CPP Project.vcxproj.filters
@@ -240,7 +240,16 @@
     <ClCompile Include="프로그래머스\스택,큐\쇠막대기.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="프로그래머스\스택,큐\주식가격.cpp">
+    <ClCompile Include="프로그래머스\스택,큐\주식가격%28미해결%29.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="프로그래머스\정렬\K번째수.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="프로그래머스\정렬\가장큰수.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="프로그래머스\정렬\H-Index.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
